Restructured using elasticsearch client. The structure consisting of entity and repository was removed

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>co.elastic.clients</groupId>
+			<artifactId>elasticsearch-java</artifactId>
+			<version>8.10.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
